# flake8-ban-utcnow

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  flake8_ban_utcnow.py  setup.cfg  tox.ini
.github/workflows/: CI.yaml
tests/: flake8_ban_utcnow_test.py
